create and wire up the login component. Add barreling and typescript paths for components and pages.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -25,7 +25,9 @@
   </div>
 
   <ion-slides #loginSlider class="ion-padding">
-    <ion-slide>Login</ion-slide>
+    <ion-slide>
+      <app-login></app-login>
+    </ion-slide>
     <ion-slide>Sign Up</ion-slide>
   </ion-slides>
 </ion-content>
