Add and wire up sign up component.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -28,6 +28,8 @@
     <ion-slide>
       <app-login></app-login>
     </ion-slide>
-    <ion-slide>Sign Up</ion-slide>
+    <ion-slide>
+      <app-sign-up></app-sign-up>
+    </ion-slide>
   </ion-slides>
 </ion-content>
