--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,24 @@
-<p>
-  login works!
-</p>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <ion-list inset>
+    <ion-item>
+      <ion-input
+        type="text"
+        placeholder="Email"
+        formControlName="email">
+      </ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input
+        type="password"
+        placeholder="Password"
+        formControlName="password">
+      </ion-input>
+    </ion-item>
+  </ion-list>
+  <ion-button
+    type="submit"
+    fill="outline"
+    [disabled]="!loginForm.valid">
+    Login
+  </ion-button>
+</form>
