--- a/src/app/pages/buy-order-list/buy-order-list.page.html
+++ b/src/app/pages/buy-order-list/buy-order-list.page.html
@@ -5,5 +5,9 @@
 </ion-header>
 
 <ion-content>
-  Buy order list goes here!!!
+  <ion-list>
+    <ion-item *ngFor="let buyOrder of buyOrders">
+      {{ buyOrder.name }}
+    </ion-item>
+  </ion-list>
 </ion-content>
