Clean up page titles and styles. Add loading spinners for login and signup.

--- a/src/app/pages/buy-order-list/buy-order-list.page.html
+++ b/src/app/pages/buy-order-list/buy-order-list.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>buy-order-list</ion-title>
+    <ion-title>Buy Order Manager - List</ion-title>
   </ion-toolbar>
 </ion-header>
 
