--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Buy Order Manager
+      Buy Order Manager - Login
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -24,17 +24,22 @@
         </ion-input>
       </ion-item>
     </ion-list>
-    <ion-button
+    <div padding class="login-buttons">
+      <ion-button
       fill="outline"
       [disabled]="!userForm.valid"
       (click)="logIn()">
       login
+      <ion-spinner *ngIf="loginLoading"></ion-spinner>
     </ion-button>
+    or
     <ion-button
       fill="outline"
       [disabled]="!userForm.valid"
       (click)="signUp">
       sign up
+      <ion-spinner *ngIf="signUpLoading"></ion-spinner>
     </ion-button>
+    </div>
   </form>
 </ion-content>
