--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -2,12 +2,6 @@ ion-header {
     text-align: center;
 }
 
-.login-prompt {
+.login-buttons {
     text-align: center;
-}
-
-.login-button {
-    margin: 0;
-    height: 1.8em;
-    margin-bottom: 12px;
 }
