--- a/src/app/pages/buy-order-list/buy-order-list.page.scss
+++ b/src/app/pages/buy-order-list/buy-order-list.page.scss
@@ -1,5 +1,7 @@
 .new-order-card {
-  ion-card-header {
-    text-align: center;
+  text-align: center;
+
+  ion-card-content {
+    padding-top: 0;
   }
 }
