Add ability to remove buy orders.

--- a/src/app/pages/add-edit-buy-order/add-edit-buy-order.page.html
+++ b/src/app/pages/add-edit-buy-order/add-edit-buy-order.page.html
@@ -34,7 +34,10 @@
   <ion-button (click)='cancel()'>
     CANCEL
   </ion-button>
-  <ion-button (click)="save()">
+  <ion-button (click)="save()" [disabled]="!buyOrderForm.valid">
     SAVE
+  </ion-button>
+  <ion-button (click)="remove()" *ngIf="oldBuyOrder">
+    DELETE
   </ion-button>
 </ion-content>
