Add a few more tests to the buy order page.

--- a/src/app/pages/add-edit-buy-order/add-edit-buy-order.page.html
+++ b/src/app/pages/add-edit-buy-order/add-edit-buy-order.page.html
@@ -33,13 +33,14 @@
   </form>
   <ion-button
     (click)="save()"
+    [routerLink]="'/buy-order-list'" routerDirection="back"
     expand="block"
     fill="outline"
     [disabled]="!buyOrderForm.valid">
     SAVE
   </ion-button>
   <ion-button
-    (click)='cancel()'
+    [routerLink]="'/buy-order-list'" routerDirection="back"
     expand="block"
     fill="outline">
     CANCEL
